# toy-engine-v0.1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WINDOWS.md  out.txt  vcpkg.json
assets/: donut.mtl  teapot.mtl
assets/car/: car.mtl
assets/common/sphere/: sphere.mtl
assets/common/torus/: torus.mtl
assets/grass_block/: grass_block.mtl
assets/kastrula/: kastrula.mtl
assets/wizard/: wizard.mtl
engine/: CMakeLists.txt
engine/include/engine/: api.h  components.h  engine.h  export.h
engine/include/engine/3d/: array.hpp  material.hpp  mesh.hpp  prefab.hpp  vertex.hpp
engine/include/engine/IO/: file_manager.h  parser.h
engine/include/engine/app/: app.h
engine/include/engine/components/: batch.h  camera.h  light.h  mesh.h  rotate.h  transform.h
engine/include/engine/input/: input.h
engine/include/engine/opengl/: buffers.h
engine/include/engine/renderer/: basics.h  core.h  debug.h  engine.h  material.h  mesh.h  renderable.h  renderable.hpp  renderer.h  shader.h  texture.h  wavefront.h
engine/include/engine/scene/: scene.h
engine/include/engine/time/: timestep.h
engine/include/engine/window/: event.h  event.hpp  window.h
engine/include/engine/window/events/: window.h  window_events.h
engine/src/: main.cpp
engine/src/IO/: file_manager.cpp  parser.cpp
engine/src/components/: batch.cpp
engine/src/input/: input.cpp
engine/src/opengl/: buffers.cpp
engine/src/renderer/: core.cpp  debug.cpp  engine.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  wavefront.cpp
engine/src/scene/: scene.cpp
engine/src/shaders/: depth.vs  main.vs  pbr.fs
engine/src/window/: window.cpp
include/: block.h  model.h  prelude.h  vertex.h
include/app/: app.h
include/components/: batch.h  light.h  mesh.h  rotate.h  transform.h
include/ecs/: camera.h  component.h  entity.h
include/ecs/components/: mesh.h  transform.h
include/renderer/: basics.h  debug.h  engine.h  material.h  mesh.h  renderer.h  shader.h  texture.h  wavefront.h
include/window/: event.h  event.hpp  window.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp  model.cpp
src/: block.cpp  file_manager.cpp  main.bkp.cpp  main.cpp  model.cpp  prelude.cpp  shader.cpp  texture.cpp  vertex.cpp
src/IO/: file_manager.cpp  parser.cpp
src/components/: batch.cpp
src/renderer/: basics.cpp  debug.cpp  engine.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  wavefront.cpp
src/shaders/: pbr.fs  simple.fs  simple.vs
src/window/: window.cpp
